RandomAccessFileDataLocator.java: Use Long.valueOf() instead new Long().
Creating new objects to wrap native 'long' values is not efficient.